# HIDDataInterpreter

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
doc/: HID - PS1 adapter.txt  HID - XBOX360 USB.txt  HID - XM-10 double.txt
inc/: HIDJoystick.h  HIDKeyboard.h  HIDMouse.h  HIDReportDescriptor.h  HIDUtils.h  hid_joystick.h  hid_report_descriptor.h
src/: CMakeLists.txt  HIDJoystick.cpp  HIDKeyboard.cpp  HIDMouse.cpp  HIDReportDescriptor.cpp  HIDReportDescriptorElements.cpp  HIDReportDescriptorElements.h  HIDReportDescriptorUsages.cpp  HIDReportDescriptorUsages.h  HIDUtils.cpp  HIDUtils.h  hid_joystick.cpp  hid_report_descriptor.cpp
tests/: CMakeLists.txt  test_double_joystick.cpp  test_joystick_betop_xf1.cpp  test_joystick_double.cpp  test_joystick_google_stadia.cpp  test_joystick_ps1_adapter.cpp  test_joystick_ps4.cpp  test_joystick_trustmaster_dual_analog.cpp  test_joystick_ultimate_2c_wireless.cpp  test_joystick_xbox360.cpp  test_joystick_xm10_double.cpp  test_keyboard.cpp  test_mouse.cpp  test_ps4.cpp  test_report_descriptor.cpp  test_utils.cpp
